tests/algorithms/x/PHP/graphs/page_rank.out
======= Nodes =======
{"A":"A","inbound":["C"],"outbound":["B","C"]}
{"B":"B","inbound":["A"],"outbound":["C"]}
{"C":"C","inbound":["A","B"],"outbound":["A"]}

Warning: Undefined array key "name" in /workspace/mochi/tests/algorithms/x/PHP/graphs/page_rank.php on line 36

Warning: Undefined array key "name" in /workspace/mochi/tests/algorithms/x/PHP/graphs/page_rank.php on line 36

Warning: Undefined array key "name" in /workspace/mochi/tests/algorithms/x/PHP/graphs/page_rank.php on line 36

Warning: Undefined array key "name" in /workspace/mochi/tests/algorithms/x/PHP/graphs/page_rank.php on line 40

Warning: Undefined array key "name" in /workspace/mochi/tests/algorithms/x/PHP/graphs/page_rank.php on line 40

Warning: Undefined array key "name" in /workspace/mochi/tests/algorithms/x/PHP/graphs/page_rank.php on line 40
======= Iteration 1 =======

Warning: Undefined array key "C" in /workspace/mochi/tests/algorithms/x/PHP/graphs/page_rank.php on line 48

Warning: Undefined array key "C" in /workspace/mochi/tests/algorithms/x/PHP/graphs/page_rank.php on line 48

Fatal error: Uncaught DivisionByZeroError: Division by zero in /workspace/mochi/tests/algorithms/x/PHP/graphs/page_rank.php:48
Stack trace:
#0 /workspace/mochi/tests/algorithms/x/PHP/graphs/page_rank.php(84): page_rank(Array, 3, 0.85)
#1 {main}
  thrown in /workspace/mochi/tests/algorithms/x/PHP/graphs/page_rank.php on line 48